k8s/streaming-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streaming-service
  labels:
    app: streaming-service
spec:
  type: ClusterIP
  selector:
    app: streaming-service
  ports:
    - name: http
      port: 8200
      targetPort: http
